@@ -81,10 +81,14 @@ MongoReply.prototype.parseBody = function(binary_reply, bson, raw, callback) {
             }
           }          
         } else {
-          // Parse documents
-          _self.index = bson.deserializeStream(binary_reply, _self.index, _batchSize, _self.documents, object_index);
-          // Adjust index
-          object_index = object_index + _batchSize;          
+          try {
+            // Parse documents
+            _self.index = bson.deserializeStream(binary_reply, _self.index, _batchSize, _self.documents, object_index);
+            // Adjust index
+            object_index = object_index + _batchSize;                      
+          } catch (err) {
+            return callback(err);
+          }
         }
 
         // If we hav more documents process NextTick
@@ -98,23 +102,28 @@ MongoReply.prototype.parseBody = function(binary_reply, bson, raw, callback) {
       // Return the process function
       return processFunction;
     }(this, binary_reply, batchSize, this.numberReturned)();
-  } else {    
-    // Let's unpack all the bson documents, deserialize them and store them
-    for(var object_index = 0; object_index < this.numberReturned; object_index++) {
-      // Read the size of the bson object    
-      var bsonObjectSize = binary_reply[this.index] | binary_reply[this.index + 1] << 8 | binary_reply[this.index + 2] << 16 | binary_reply[this.index + 3] << 24;    
-      // If we are storing the raw responses to pipe straight through
-      if(raw) {
-        // Deserialize the object and add to the documents array
-        this.documents.push(binary_reply.slice(this.index, this.index + bsonObjectSize));            
-      } else {
-        // Deserialize the object and add to the documents array
-        this.documents.push(bson.deserialize(binary_reply.slice(this.index, this.index + bsonObjectSize)));      
-      }
-      // Adjust binary index to point to next block of binary bson data
-      this.index = this.index + bsonObjectSize;
-    }          
-
+  } else {  
+    try { 
+      // Let's unpack all the bson documents, deserialize them and store them
+      for(var object_index = 0; object_index < this.numberReturned; object_index++) {
+        // Read the size of the bson object    
+        var bsonObjectSize = binary_reply[this.index] | binary_reply[this.index + 1] << 8 | binary_reply[this.index + 2] << 16 | binary_reply[this.index + 3] << 24;    
+        // If we are storing the raw responses to pipe straight through
+        if(raw) {
+          // Deserialize the object and add to the documents array
+          this.documents.push(binary_reply.slice(this.index, this.index + bsonObjectSize));            
+        } else {
+          // Deserialize the object and add to the documents array
+          this.documents.push(bson.deserialize(binary_reply.slice(this.index, this.index + bsonObjectSize)));      
+        }
+        // Adjust binary index to point to next block of binary bson data
+        this.index = this.index + bsonObjectSize;
+      }          
+    } catch(err) {
+      return callback(err);
+    }
+    
+    // No error return
     callback(null);    
   }  
 }
